--- a/index.html
+++ b/index.html
@@ -61,7 +61,31 @@
             </div>
         </div>
         <div class="container-descricao">
-
+            <h2>Novo projeto</h2>
+            <form action="">
+                <div>
+                    <label for="nome">Nome do projeto</label>
+                    <input type="text" id="nome" name="nome"/>
+                </div>
+                <div>
+                    <label for="descricao">Descricao</label>
+                    <textarea id="descricao" name="descricao"></textarea>
+                </div>
+                <div>
+                    <label for="categoria">Tags</label>
+                    <input type="text" id="categoria" name="categoria"/>
+                </div>
+                <ul class="lista-tags">
+                    <li>
+                        <p>Front-end</p>
+                        <img src="./img/close-black.svg" alt="">
+                    </li>
+                </ul>
+                <div class="container-botoes">
+                    <button class="botao-descartar">Descartar</button>
+                    <button class="botao-publicar">Publicar</button>
+                </div>
+            </form>
         </div>
     </main>
 
