estilizacao de botoes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </aside>
 
     <main>
-        <div class="container-uploud-imagem">
+        <div class="container-upload-imagem">
             <div class="container-imagem">
                 <img src="./img/imagem1.png" alt="" class="main-imagem">
             </div>
